[package]
name = "trackforge"
version = "0.1.6"
edition = "2024"
description = "A unified, high-performance computer vision tracking library."
rust-version = "1.85"
license = "MIT"
readme = "README.md"
repository = "https://github.com/onuralpszr/trackforge"
homepage = "https://github.com/onuralpszr/trackforge"
keywords = ["computer-vision", "tracking", "bytetrack", "kalman-filter"]
categories = ["computer-vision", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "trackforge"
crate-type = ["cdylib", "rlib"]

[dependencies]
image = "0.25.9"
nalgebra = "0.34.1"
thiserror = "2.0.7"
pyo3 = { version = "0.27.2", features = ["extension-module"], optional = true }

[features]
default = []
python = ["dep:pyo3"]

[[example]]
name = "byte_track_demo"
path = "examples/rust/byte_track_demo.rs"

[dev-dependencies]
ndarray = "0.17.1"
opencv = "0.98.0"
ort = { version = "2.0.0-rc.10", features = ["ndarray"] }
usls = { version = "0.1.10", features = ["rtdetr"] }
# Testing dependencies

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
